dedicated invoker